# cudy-router

./: .gitignore  .pdm-python  README.md  pyproject.toml  requirements.txt
cudy_router/: const.py  coordinator.py  cudy_parser.py  devices_manager.py  modem_manager.py  parser.py  router.py  sms_manager.py
cudy_router/models/: device.py  modem.py  sms.py
sample/: get_data.py  get_devices.py  get_modem_info.py  get_sms.py  get_sms_summary.py  send_sms.py
